Fix sonar issues
RISDEV-0000