@@ -5,7 +5,6 @@ import de.bund.digitalservice.ris.caselaw.domain.LegalPeriodicalEdition;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
@@ -32,7 +31,7 @@ public class LegalPeriodicalEditionTransformer {
                 ? new ArrayList<>()
                 : legalPeriodicalEditionDTO.getReferences().stream()
                     .map(ReferenceTransformer::transformToDomain)
-                    .collect(Collectors.toList()))
+                    .toList())
         .build();
   }
 
